Fix title too long

--- a/modules/mod_emundus_checklist/style/emundus_checklist.css
+++ b/modules/mod_emundus_checklist/style/emundus_checklist.css
@@ -18,11 +18,17 @@
 .mod_emundus_checklist___grid{
     display: grid;
     grid-template-columns: 32px 90%;
+    align-items: baseline;
 }
 
-.mod_emundus_checklist___form_item a{
+.mod_emundus_checklist___form_item a:not(.mod_emundus_checklist___attachment_links){
     border-bottom: unset !important;
     padding: unset !important;
+    min-height: 40px;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
 
 .mod_emundus_checklist #mod_emundus_checklist___expand_icon{
